--- a/package.json
+++ b/package.json
@@ -8,17 +8,43 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "base-64": "^0.1.0",
+    "events": "^3.2.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-elements": "^2.3.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-use-persist-storage": "^1.0.1",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.8.2",
+    "react-navigation": "^4.4.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "snoowrap": "^1.21.0",
+    "stream": "0.0.2",
+    "url": "^0.11.0",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/base-64": "^0.1.3",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
     "typescript": "~3.9.5"
   },
   "private": true
