--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.6",
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "base-64": "^0.1.0",
     "events": "^3.2.0",
     "expo": "~38.0.8",
+    "expo-av": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "expo-video-player": "^1.6.0",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "react": "~16.11.0",
