--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-elements": "^2.3.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-markdown-renderer": "^3.2.8",
     "react-native-reanimated": "~1.9.0",
+    "react-native-render-html": "^4.2.3",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-swiper": "^1.6.0",
