added sub modal and ability to enter searched subs

--- a/app.json
+++ b/app.json
@@ -19,6 +19,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.carrotcake.clearforreddit",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/temp_adaptive_icon.png",
+        "backgroundColor": "#579bfa"
+      }
     }
   }
 }
