--- a/app.json
+++ b/app.json
@@ -13,9 +13,12 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.carrotcake.clearforreddit"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -26,6 +29,12 @@
         "foregroundImage": "./assets/images/temp_adaptive_icon.png",
         "backgroundColor": "#579bfa"
       }
-    }
+    },
+    "sdkVersion": "38.0.0",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ]
   }
 }
