--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -18,13 +16,15 @@
     "events": "^3.2.0",
     "expo": "~38.0.8",
     "expo-av": "~8.2.1",
+    "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
+    "expo-updates": "~0.2.10",
     "expo-video-player": "^1.6.0",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "~0.62.2",
     "react-native-elements": "^2.3.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
@@ -34,7 +34,9 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-unimodules": "~0.10.1",
     "react-native-use-persist-storage": "^1.0.1",
+    "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.8.2",
     "react-navigation": "^4.4.0",
@@ -48,11 +50,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.11.0",
     "@types/base-64": "^0.1.3",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-redux": "^7.1.9",
     "typescript": "~3.9.5"
   },
-  "private": true
+  "private": true,
+  "name": "clearForReddit",
+  "version": "1.0.0"
 }
