--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0",
     "@types/base-64": "^0.1.3",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-native-video": "^5.0.1",
     "@types/react-redux": "^7.1.9",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.11.0",
     "typescript": "~3.9.5"
   },
   "private": true,
