--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-unimodules": "~0.10.1",
     "react-native-use-persist-storage": "^1.0.1",
     "react-native-video": "^5.1.0-alpha8",
+    "react-native-video-controls": "^2.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.8.2",
     "react-navigation": "^4.4.0",
@@ -61,6 +62,6 @@
     "typescript": "~3.9.5"
   },
   "private": true,
-  "name": "clearForReddit",
+  "name": "clear-for-reddit",
   "version": "1.0.0"
 }
