--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-markdown-renderer": "^3.2.8",
+    "react-native-parallax-header": "^1.1.4",
     "react-native-reanimated": "~1.9.0",
     "react-native-render-html": "^4.2.3",
     "react-native-safe-area-context": "~3.0.7",
