--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-video-controls": "^2.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.8.2",
+    "react-native-youtube": "^2.0.1",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
