fixed youtube on android, updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ web-build/
 # Secrets
 util/snoowrap/snoowrapConfig.tsx
 util/imgur/imgurConfig.tsx
+util/youtube/youtubeConfig.tsx
 
 /android/androidbuilds/
 
