--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
+  "name": "ClearForReddit",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "expo start --web"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "^5.9.6",
-    "@react-native-community/slider": "^3.0.3",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "base-64": "^0.1.0",
-    "events": "^3.2.0",
-    "expo": "~38.0.8",
-    "expo-av": "~8.2.1",
-    "expo-splash-screen": "^0.5.0",
-    "expo-status-bar": "^1.0.2",
-    "expo-updates": "~0.2.10",
-    "expo-video-player": "^1.6.0",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.0",
+    "@react-navigation/native": "^5.8.0",
+    "@react-navigation/stack": "^5.10.0",
+    "base-64": "^1.0.0",
+    "expo-splash-screen": "^0.6.2",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-animatable": "^1.3.3",
-    "react-native-device-info": "^6.0.4",
-    "react-native-elements": "^2.3.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-device-info": "^7.0.2",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-viewer": "0.0.3",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-markdown-renderer": "^3.2.8",
-    "react-native-parallax-header": "^1.1.4",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-render-html": "^4.2.3",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-render-html": "^4.2.4",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-use-persist-storage": "^1.0.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
-    "react-native-video-controls": "^2.6.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.8.2",
-    "react-native-youtube": "^2.0.1",
-    "react-navigation": "^4.4.0",
+    "react-native-video-controls": "^2.7.1",
+    "react-native-webview": "^10.9.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "snoowrap": "^1.21.0",
     "stream": "0.0.2",
-    "url": "^0.11.0",
-    "util": "^0.12.3"
+    "url": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/base-64": "^0.1.3",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
-    "@types/react-native-video": "^5.0.1",
-    "@types/react-redux": "^7.1.9",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0",
-    "typescript": "~3.9.5"
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "@types/jest": "^25.2.3",
+    "@types/react-native": "^0.63.2",
+    "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.8.3"
   },
-  "private": true,
-  "name": "clear-for-reddit",
-  "version": "1.0.0"
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
