--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
+    "@types/base-64": "^0.1.3",
+    "@types/react-redux": "^7.1.9",
     "base-64": "^1.0.0",
     "expo-splash-screen": "^0.6.2",
     "react": "16.13.1",
